# motor_control_pkg

./: README.md
motor_control/: CMakeLists.txt  package.xml
motor_control/include/motor_control/: motor_control.cpp  motor_control.hpp  motor_pos_control.cpp  motor_pos_control.hpp  motor_torque_control.cpp  motor_torque_control.hpp  ros_motor_control.cpp  ros_motor_control.hpp  scoped_ptr.hpp  socket_client_impl.cpp  socket_client_impl.hpp
motor_control/launch/: motor_bringup.launch
motor_control/src/: ros_motor_control_node.cpp
motor_control_msg/: CMakeLists.txt  package.xml
motor_control_msg/msg/: actual_value.msg  target_pos_value.msg  target_torque_value.msg
